fix: Artist credit

--- a/src/components/sidebar/Mobile.astro
+++ b/src/components/sidebar/Mobile.astro
@@ -10,6 +10,7 @@ import MobilePaletteOpen from './MobilePaletteOpen.svelte';
     <Image
       src={Teto}
       alt="Kasane Teto hugging a Kasane Teto Plushie"
+      title="Made by @nyapurrlitan on X"
       class="h-16 w-16 rounded-full shadow-lg"
       loading="eager"
     />
