--- a/src/components/sidebar/Desktop.astro
+++ b/src/components/sidebar/Desktop.astro
@@ -7,7 +7,13 @@ import { Image } from 'astro:assets';
 
 <nav class="bg-mantle hidden w-2/7 min-w-[380px] items-center md:flex">
   <div class="my-auto h-fit w-full scale-[0.9] 2xl:scale-100">
-    <Image src={Teto} alt="Kasane Teto hugging a Kasane Teto Plushie" class="mx-auto w-2/3 rounded-full shadow-lg" />
+    <Image
+      title="Made by @nyapurrlitan on X"
+      src={Teto}
+      alt="Kasane Teto hugging a Kasane Teto Plushie"
+      class="mx-auto w-2/3 rounded-full shadow-lg"
+      loading="eager"
+    />
     <SidebarText client:load />
     <Buttons class="mt-28" />
   </div>
