--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -1,30 +1,7 @@
 ---
 import Layout from '$lib/layouts/Layout.astro';
 import Projects from '$lib/layouts/Projects.svelte';
-
-const projectArray = [
-  {
-    title: 'Shibedrill.site',
-    description: 'A Custom-built blog site for ShibeDrill',
-    src: '/images/cheesecake.webp',
-    alt: 'Cheesecake, the harbinger of the end times',
-    badges: ['AstroJS', 'DaisyUI', 'TailwindCSS', 'Vercel'],
-  },
-  {
-    title: 'Lockbox',
-    description: 'A password protected dropbox where users given a password can upload a file',
-    src: '/images/lockbox.svg',
-    alt: 'Lockbox Logo',
-    badges: ['DaisyUI', 'Docker', 'SvelteKit', 'TailwindCSS', 'TypeScript'],
-  },
-  {
-    title: 'SVChat',
-    description: 'A simple chat application built in SvelteKit',
-    src: '/images/svchat.svg',
-    alt: '',
-    badges: ['Cassandra', 'SQLite', 'SvelteKit', 'TailwindCSS', 'TypeScript'],
-  },
-];
+import { projectArray } from '$lib/projects';
 ---
 
 <Layout description="April Hall's Personal Projects" pageTitle="Projects">
