--- a/src/components/sidebar/Desktop.astro
+++ b/src/components/sidebar/Desktop.astro
@@ -8,7 +8,7 @@ import { Image } from 'astro:assets';
 <nav class="bg-mantle hidden w-2/7 min-w-[380px] items-center md:flex">
   <div class="my-auto h-fit w-full scale-[0.9] 2xl:scale-100">
     <Image
-      title="Made by @nyapurrlitan on X"
+      title="PFP drawn by @nyapurrlitan on Twitter"
       src={Teto}
       alt="Kasane Teto hugging a Kasane Teto Plushie"
       class="mx-auto w-2/3 rounded-full shadow-lg"
