--- a/src/pages/posts/index.astro
+++ b/src/pages/posts/index.astro
@@ -19,9 +19,9 @@ posts.sort(
     <h1 class="mb-4 text-4xl font-bold">Blog Posts</h1>
     {
       posts.map((post) => (
-        <div class="bg-mantle w-1/2 rounded-xl p-4">
+        <div class="bg-mantle w-full rounded-xl p-4 md:w-1/2">
           <h1 class="text-2xl font-bold">{post.data.title}</h1>
-          <h2 class="w-1/2">
+          <h2 class="w-full md:w-1/2">
             By
             <span class="font-bold">{post.data.author}</span>
             <span class="text-subtext-0">
