--- a/src/layouts/Head.astro
+++ b/src/layouts/Head.astro
@@ -1,12 +1,15 @@
 ---
-const { pageTitle, description = "April Hall's Personal Portfolio" }: { pageTitle?: string; description?: string } =
-  Astro.props;
+const {
+  pageTitle,
+  description = "April Hall's Personal Portfolio",
+  image = '/images/teto.webp',
+}: { pageTitle?: string; description?: string; image?: string } = Astro.props;
 import { ClientRouter } from 'astro:transitions';
 import SpeedInsights from '@vercel/speed-insights/astro';
 ---
 
 <!-- 
-  Portfolio V2 - A minimalistic catppuccin developer portfolio
+  Portfolio V2 - A minimalistic Catppuccin developer portfolio
   https://github.com/arithefirst/portfolio-v2
   Copyright (C) 2025 April Hall (arithefirst)
 
@@ -29,16 +32,16 @@ import SpeedInsights from '@vercel/speed-insights/astro';
   {description ? <meta name="description" content={description} /> : ''}
   <meta itemprop="name" content={`arithefirst ${pageTitle ? `| ${pageTitle}` : ''}`} />
   {description ? <meta itemprop="description" content={description} /> : ''}
-  <meta itemprop="image" content="/images/teto.webp" />
-  <meta property="og:url" content={`https://next.arithefirst.com${Astro.url.pathname}`} />
+  <meta itemprop="image" content={image} />
+  <meta property="og:url" content={`https://www.arithefirst.com${Astro.url.pathname}`} />
   <meta property="og:type" content="website" />
   <meta property="og:title" content={`arithefirst ${pageTitle ? ` | ${pageTitle}` : ''}`} />
   {description ? <meta property="og:description" content={description} /> : ''}
-  <meta property="og:image" content="/images/teto.webp" />
+  <meta property="og:image" content={image} />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content={`arithefirst ${pageTitle ? ` | ${pageTitle}` : ''}`} />
   {description ? <meta name="twitter:description" content={description} /> : ''}
-  <meta name="twitter:image" content="/images/teto.webp" />
+  <meta name="twitter:image" content={image} />
 
   <!-- Other -->
   <meta charset="UTF-8" />
