fix: Image path

--- a/src/pages/bee.astro
+++ b/src/pages/bee.astro
@@ -18,7 +18,7 @@ import BeeMovie from '$lib/content/bee-movie.md';
   <Head
     pageTitle="Barry Bee Benson"
     description="According to all known laws of aviation, there is no way a bee should be able to fly."
-    image="/images/barry_bee_benson.webp"
+    image="https://www.arithefirst.com/images/barry_bee_benson.webp"
   />
   <Analytics />
   <body class="m-0 h-full w-full">
