fix: Catppuccin colors for codeblocks

--- a/src/pages/posts/[slug].astro
+++ b/src/pages/posts/[slug].astro
@@ -24,7 +24,9 @@ const { Content } = await render(post);
         - {post.data.date.toLocaleDateString(undefined, { year: 'numeric', month: 'long', day: 'numeric' })}</span
       >
     </h2>
-    <article class="lg:prose-lg prose-h2:text-2xl prose prose-p:indent-12 md:w-2/3">
+    <article
+      class="lg:prose-lg prose-h2:text-2xl prose prose-p:indent-12 prose-pre:border-2 prose-pre:border-border md:w-2/3"
+    >
       <Content />
     </article>
   </div>
