--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import Layout from '$lib/layouts/Layout.astro';
 <Layout>
   <div class="w-full p-8">
     <h1 class="mb-4 text-4xl font-bold">About Me</h1>
-    <article class="lg:prose-lg prose-h2:text-2xl prose md:w-2/3">
+    <article class="lg:prose-lg prose-h2:text-2xl prose-p:indent-12 prose md:w-2/3">
       <AboutMe />
     </article>
   </div>
