--- a/src/pages/posts/[slug].astro
+++ b/src/pages/posts/[slug].astro
@@ -14,7 +14,7 @@ const { post } = Astro.props;
 const { Content } = await render(post);
 ---
 
-<Layout>
+<Layout description={post.body?.split('\n')[0] + '..'} pageTitle={post.data.title}>
   <div class="w-full p-8">
     <h1 class="mb-1 text-4xl font-bold">{post.data.title}</h1>
     <h2 class="w-1/2 text-lg">
