feat: Auto-generated og:images

--- a/src/layouts/Head.astro
+++ b/src/layouts/Head.astro
@@ -2,7 +2,7 @@
 const {
   pageTitle,
   description = "April Hall's Personal Portfolio",
-  image = '/images/teto.webp',
+  image = 'https://www.arithefirst.com/images/teto.webp',
 }: { pageTitle?: string; description?: string; image?: string } = Astro.props;
 import { ClientRouter } from 'astro:transitions';
 import SpeedInsights from '@vercel/speed-insights/astro';
