--- a/src/pages/posts/[slug].astro
+++ b/src/pages/posts/[slug].astro
@@ -18,7 +18,7 @@ const { Content } = await render(post);
 <Layout
   description={formatDescription(post.body)}
   pageTitle={post.data.title}
-  image={`https://www.arithefirst.com/og_image/${post.id}`}
+  image={`https://www.arithefirst.com/og_image/${post.id}.png`}
 >
   <div class="w-full p-8">
     <h1 class="mb-1 text-4xl font-bold">{post.data.title}</h1>
