fix: Update metadata

--- a/src/pages/posts/[slug].astro
+++ b/src/pages/posts/[slug].astro
@@ -15,11 +15,7 @@ const { post } = Astro.props;
 const { Content } = await render(post);
 ---
 
-<Layout
-  description={formatDescription(post.body)}
-  pageTitle={post.data.title}
-  image={`https://www.arithefirst.com/og_image/${post.id}.png`}
->
+<Layout description=" " pageTitle={post.data.title} image={`https://www.arithefirst.com/og_image/${post.id}.png`}>
   <div class="w-full p-8">
     <h1 class="mb-1 text-4xl font-bold">{post.data.title}</h1>
     <h2 class="w-1/2 text-lg">
