--- a/src/pages/posts/[slug].astro
+++ b/src/pages/posts/[slug].astro
@@ -1,7 +1,6 @@
 ---
 import { type CollectionEntry, getCollection, render } from 'astro:content';
 import Layout from '$lib/layouts/Layout.astro';
-import { formatDescription } from '$lib/scripts/formatDescription';
 import Clock from '$lib/icons/clock.svelte';
 
 export async function getStaticPaths() {
@@ -16,7 +15,7 @@ const { post } = Astro.props;
 const { Content, remarkPluginFrontmatter } = await render(post);
 ---
 
-<Layout description=" " pageTitle={post.data.title} image={`https://www.arithefirst.com/og_image/${post.id}.png`}>
+<Layout description="" pageTitle={post.data.title} image={`https://www.arithefirst.com/og_image/${post.id}.png`}>
   <div class="w-full p-8">
     <h1 class="mb-1 text-4xl font-bold">{post.data.title}</h1>
     <h2 class="w-1/2 text-lg">
@@ -29,9 +28,7 @@ const { Content, remarkPluginFrontmatter } = await render(post);
     <h2 class="text-subtext-0 flex w-1/2 items-center gap-1">
       <Clock size="16px" />{remarkPluginFrontmatter.minutesRead}
     </h2>
-    <article
-      class="lg:prose-lg prose-h2:text-2xl prose prose-p:indent-12 prose-pre:border-2 prose-pre:border-border md:w-2/3"
-    >
+    <article class="lg:prose-lg prose-h2:text-2xl prose prose-pre:border-2 prose-pre:border-border md:w-2/3">
       <Content />
     </article>
   </div>
