--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,6 +8,7 @@
   /* Catppuccin Colors */
   --color-mauve: #cba6f7;
   --color-red: #f38ba8;
+  --color-yellow: #f9e2af;
   --color-text: #cdd6f4;
   --color-subtext-1: #bac2de;
   --color-subtext-0: #a6adc8;
