fix: Change pallette to "site navigation"

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -30,7 +30,7 @@ const { pageTitle, description, image }: { pageTitle?: string; description?: str
       <strong class="bold mr-1">TIP: </strong>
       Press
       <span class="mr-0.5 ml-1 flex items-center"><KBD class="mr-0.5">CTRL</KBD>+<KBD class="mr-0.5">K</KBD></span> or click
-      here to open Command Palette
+      here to open the site navigation.
     </button>
   </body>
 </html>
