--- a/src/pages/bee.astro
+++ b/src/pages/bee.astro
@@ -58,7 +58,7 @@ import BeeMovie from '$lib/content/bee-movie.md';
       <strong class="bold mr-1">TIP: </strong>
       Press
       <span class="mr-0.5 ml-1 flex items-center"><KBD class="mr-0.5">CTRL</KBD>+<KBD class="mr-0.5">K</KBD></span> or click
-      here to open Command Palette
+      here to open the site navigation.
     </button>
   </body>
 </html>
