--- a/src/pages/posts/index.astro
+++ b/src/pages/posts/index.astro
@@ -2,7 +2,6 @@
 import { Button } from '$lib/components/ui/button';
 import Clock from '$lib/icons/clock.svelte';
 import Layout from '$lib/layouts/Layout.astro';
-import { formatDescription } from '$lib/scripts/formatDescription';
 import type { CollectionEntry } from 'astro:content';
 import { getCollection, render } from 'astro:content';
 import Head from '$lib/layouts/Head.astro';
@@ -25,13 +24,13 @@ posts.sort((a: CollectionEntry<'posts'>, b: CollectionEntry<'posts'>) => b.data.
 <Layout excludeHead>
   <div class="w-full p-8">
     <h1 class="mb-4 text-4xl font-bold">Blog Posts</h1>
-    <div class="flex flex-col gap-4">
+    <div class="@container flex flex-col gap-4">
       {
         posts.map(async (post) => {
           const { remarkPluginFrontmatter } = await render(post);
 
           return (
-            <div class="bg-mantle w-full rounded-xl p-4 md:w-3/4">
+            <div class="bg-mantle w-full rounded-xl p-4 @5xl:w-1/2">
               <h1 class="text-2xl font-bold">{post.data.title}</h1>
               <h2 class="w-full md:w-1/2">
                 By
@@ -44,7 +43,7 @@ posts.sort((a: CollectionEntry<'posts'>, b: CollectionEntry<'posts'>) => b.data.
                 <Clock size="16px" />
                 {remarkPluginFrontmatter.minutesRead}
               </h2>
-              <p class="my-4">{formatDescription(post.body, 300)}</p>
+              <p class="my-4">{post.data.description}</p>
               <Button href={`/posts/${post.id}`}>Read More</Button>
             </div>
           );
