--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,6 +4,7 @@
 @config './tailwind.config.ts';
 
 @utility prose {
+  /* Inline Codeblocks */
   *:not(pre) > code {
     &::before,
     &::after {
@@ -11,9 +12,50 @@
     }
 
     background-color: var(--color-surface-0);
-    border-radius: 5px;
+    border-radius: 0.375rem;
     border: 1px solid var(--color-mantle);
     padding: 1px 2px;
+  }
+
+  /* Dropdowns */
+  details {
+    background: var(--color-mantle);
+    border-radius: 0.375rem;
+    border: 2px solid var(--color-border);
+    padding: 0 1rem;
+
+    summary {
+      background-color: var(--color-base);
+      padding: 0.5rem 1rem;
+      border-radius: 0.375rem;
+      cursor: pointer;
+      list-style: none;
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
+      margin: 0 -1rem;
+
+      &::before {
+        content: '';
+        width: 22px;
+        height: 22px;
+        background: url('/dropdown.svg');
+        background-size: cover;
+        transition: 0.2s;
+      }
+
+      &::-webkit-details-marker {
+        display: none;
+      }
+    }
+
+    &[open] summary {
+      border-radius: 0.375rem 0.375rem 0 0;
+      border-bottom: 2px solid var(--color-border);
+      &::before {
+        transform: rotate(180deg);
+      }
+    }
   }
 }
 
