--- a/src/pages/posts/index.astro
+++ b/src/pages/posts/index.astro
@@ -5,6 +5,7 @@ import Layout from '$lib/layouts/Layout.astro';
 import type { CollectionEntry } from 'astro:content';
 import { getCollection, render } from 'astro:content';
 import Head from '$lib/layouts/Head.astro';
+import Transition from '$lib/components/Transition.svelte';
 
 const posts = await getCollection('posts');
 
@@ -26,11 +27,11 @@ posts.sort((a: CollectionEntry<'posts'>, b: CollectionEntry<'posts'>) => b.data.
     <h1 class="mb-4 text-4xl font-bold">Blog Posts</h1>
     <div class="@container flex flex-col gap-4">
       {
-        posts.map(async (post) => {
+        posts.map(async (post, i) => {
           const { remarkPluginFrontmatter } = await render(post);
 
           return (
-            <div class="bg-mantle w-full rounded-xl p-4 @5xl:w-1/2">
+            <Transition delay={i * 100} class="bg-mantle w-full rounded-xl p-4 @5xl:w-1/2" client:load>
               <h1 class="text-2xl font-bold">{post.data.title}</h1>
               <h2 class="w-full md:w-1/2">
                 By
@@ -45,7 +46,7 @@ posts.sort((a: CollectionEntry<'posts'>, b: CollectionEntry<'posts'>) => b.data.
               </h2>
               <p class="my-4">{post.data.description}</p>
               <Button href={`/posts/${post.id}`}>Read More</Button>
-            </div>
+            </Transition>
           );
         })
       }
