--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -3,9 +3,11 @@ import Layout from '$lib/layouts/Layout.astro';
 import { Button } from '$lib/components/ui/button';
 import { links } from '$lib/scripts/links';
 import Transition from '$lib/components/Transition.svelte';
+import Clipped from '$lib/components/Clipped.svelte';
 ---
 
-<Layout>
+<Layout description="Everywhere you can find April Hall on the internet" pageTitle="Find Me">
+  <Clipped client:only="" />
   <div class="w-full p-8">
     <h1 class="mb-1 text-4xl font-bold">Find Me</h1>
     <h2 class="mb-1 text-xl">@arithefirst <em>(almost)</em> everywhere</h2>
