feat: Add experience

--- a/src/pages/experience.astro
+++ b/src/pages/experience.astro
@@ -14,6 +14,19 @@ interface ExperienceCard {
 
 const experienceArray: ExperienceCard[] = [
   {
+    startDate: new Date('May 1, 2025 EST'),
+    endDate: new Date('May 1, 2025 EST'),
+    company: 'Kingsway Indoor Percussion & Colorguard',
+    position: 'Freelance Developer',
+    bullets: [
+      'Developed a software to track the locations of students on a 4-day field trip',
+      'Worked closely with staff & admin to make sure the solution worked properly',
+      'Recived praise for the speed at which a solution was able to be developed and deployed',
+    ],
+    src: '/images/krsd.png',
+    alt: 'kingsway school district logo',
+  },
+  {
     startDate: new Date('November 13, 2024 EST'),
     endDate: new Date(),
     company: 'Hikari3',
