--- a/src/components/sidebar/Desktop.astro
+++ b/src/components/sidebar/Desktop.astro
@@ -1,6 +1,6 @@
 ---
 import Buttons from '$lib/components/sidebar/Buttons.astro';
-import Teto from '$lib/images/teto.jpg';
+import Kitty from '$lib/images/kitty.png';
 import SidebarText from '$lib/layouts/SidebarText.svelte';
 import { Image } from 'astro:assets';
 ---
@@ -8,9 +8,8 @@ import { Image } from 'astro:assets';
 <nav class="bg-mantle hidden w-2/7 min-w-[380px] items-center md:flex">
   <div class="my-auto h-fit w-full scale-[0.9] 2xl:scale-100">
     <Image
-      title="PFP drawn by @nyapurrlitan on Twitter"
-      src={Teto}
-      alt="Kasane Teto hugging a Kasane Teto Plushie"
+      src={Kitty}
+      alt="An orange cat hugging a creeper plushie"
       class="mx-auto w-2/3 rounded-full shadow-lg"
       loading="eager"
     />
