--- a/src/components/sidebar/Mobile.astro
+++ b/src/components/sidebar/Mobile.astro
@@ -1,6 +1,6 @@
 ---
 import Buttons from '$lib/components/sidebar/Buttons.astro';
-import Teto from '$lib/images/teto.jpg';
+import Kitty from '$lib/images/kitty.png';
 import { Image } from 'astro:assets';
 import MobilePaletteOpen from './MobilePaletteOpen.svelte';
 ---
@@ -8,9 +8,8 @@ import MobilePaletteOpen from './MobilePaletteOpen.svelte';
 <nav class="bg-mantle flex h-1/5 flex-col items-center justify-center p-4 shadow-2xl md:hidden">
   <div class="flex items-center justify-center">
     <Image
-      src={Teto}
-      alt="Kasane Teto hugging a Kasane Teto Plushie"
-      title="Made by @nyapurrlitan on X"
+      src={Kitty}
+      alt="An orange cat hugging a creeper plushie"
       class="h-16 w-16 rounded-full shadow-lg"
       loading="eager"
     />
