--- a/src/layouts/Head.astro
+++ b/src/layouts/Head.astro
@@ -2,7 +2,7 @@
 const {
   pageTitle,
   description = "April Hall's Personal Portfolio",
-  image = 'https://www.arithefirst.com/images/teto.webp',
+  image = 'https://www.arithefirst.com/images/kitty.webp',
 }: { pageTitle?: string; description?: string; image?: string } = Astro.props;
 import { ClientRouter } from 'astro:transitions';
 import SpeedInsights from '@vercel/speed-insights/astro';
@@ -47,7 +47,7 @@ import SpeedInsights from '@vercel/speed-insights/astro';
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width" />
   <meta name="darkreader-lock" />
-  <link rel="icon" type="image/svg+xml" href="/images/teto-rounded.webp" />
+  <link rel="icon" type="image/svg+xml" href="/images/kitty-rounded.webp" />
   <meta name="generator" content={Astro.generator} />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
