--- a/src/components/sidebar/Desktop.astro
+++ b/src/components/sidebar/Desktop.astro
@@ -13,7 +13,7 @@ import { Image } from 'astro:assets';
       class="mx-auto w-2/3 rounded-full shadow-lg"
       loading="eager"
     />
-    <SidebarText client:load />
+    <SidebarText client:load transition:persist="sidebartext" />
     <Buttons class="mt-28" />
   </div>
 </nav>
